force-app/main/default/objects/CopilotEvents__dll/fields/contextVariableInput_value__c.field-meta.xml
<CustomField>
    <fullName>contextVariableInput_value__c</fullName>
    <label>contextVariableInput_value</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>contextVariableInput_value</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>