force-app/main/default/objects/CopilotEvents__dll/fields/conversationDefinition__c.field-meta.xml
<CustomField>
    <fullName>conversationDefinition__c</fullName>
    <label>conversationDefinition</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>conversationDefinition</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>