force-app/main/default/objects/CopilotEvents__dll/fields/conversationDialog__c.field-meta.xml
<CustomField>
    <fullName>conversationDialog__c</fullName>
    <label>conversationDialog</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>conversationDialog</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>