force-app/main/default/objects/CopilotEvents__dll/fields/conversationTurn__c.field-meta.xml
<CustomField>
    <fullName>conversationTurn__c</fullName>
    <label>conversationTurn</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>conversationTurn</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>