force-app/main/default/objects/CopilotEvents__dll/fields/detectedIntent_category__c.field-meta.xml
<CustomField>
    <fullName>detectedIntent_category__c</fullName>
    <label>detectedIntent_category</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>detectedIntent_category</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>