force-app/main/default/objects/CopilotEvents__dll/fields/eventTimestamp__c.field-meta.xml
<CustomField>
    <fullName>eventTimestamp__c</fullName>
    <label>eventTimestamp</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>eventTimestamp</externalName>
        <isEventDate>true</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>DateTime</type>
</CustomField>