force-app/main/default/objects/CopilotEvents__dll/fields/externalLatencyTime__c.field-meta.xml
<CustomField>
    <fullName>externalLatencyTime__c</fullName>
    <label>externalLatencyTime</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>externalLatencyTime</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>