force-app/main/default/objects/CopilotEvents__dll/fields/integrationName__c.field-meta.xml
<CustomField>
    <fullName>integrationName__c</fullName>
    <label>integrationName</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>integrationName</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>