force-app/main/default/objects/CopilotEvents__dll/fields/KQ_uuid__c.field-meta.xml
<CustomField>
    <fullName>KQ_uuid__c</fullName>
    <label>KQ_uuid</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <externalName>KQ_uuid</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>KEY_QUALIFIER</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>