force-app/main/default/objects/CopilotEvents__dll/fields/plannerActionOutput_isSuccess__c.field-meta.xml
<CustomField>
    <fullName>plannerActionOutput_isSuccess__c</fullName>
    <label>plannerActionOutput_isSuccess</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>plannerActionOutput_isSuccess</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>