force-app/main/default/objects/CopilotEvents__dll/fields/plannerPlanType_planData__c.field-meta.xml
<CustomField>
    <fullName>plannerPlanType_planData__c</fullName>
    <label>plannerPlanType_planData</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>plannerPlanType_planData</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>