force-app/main/default/objects/CopilotEvents__dll/fields/plannerTopic_topic__c.field-meta.xml
<CustomField>
    <fullName>plannerTopic_topic__c</fullName>
    <label>plannerTopic_topic</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>plannerTopic_topic</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>