force-app/main/default/objects/CopilotEvents__dll/fields/ruleActionId__c.field-meta.xml
<CustomField>
    <fullName>ruleActionId__c</fullName>
    <label>ruleActionId</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>ruleActionId</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>